--- a/Assets/results/CubeAgent/configuration.yaml
+++ b/Assets/results/CubeAgent/configuration.yaml
@@ -3,13 +3,13 @@ behaviors:
   CubeAgent:
     trainer_type: ppo
     hyperparameters:
-      batch_size: 10
-      buffer_size: 100
+      batch_size: 128
+      buffer_size: 2048
       learning_rate: 0.0003
-      beta: 0.0005
+      beta: 0.005
       epsilon: 0.2
-      lambd: 0.99
-      num_epoch: 3
+      lambd: 0.9
+      num_epoch: 5
       shared_critic: false
       learning_rate_schedule: linear
       beta_schedule: constant
@@ -24,7 +24,7 @@ behaviors:
       deterministic: false
     reward_signals:
       extrinsic:
-        gamma: 0.99
+        gamma: 0.9
         strength: 1.0
         network_settings:
           normalize: false
@@ -37,7 +37,7 @@ behaviors:
     init_path: null
     keep_checkpoints: 5
     checkpoint_interval: 500000
-    max_steps: 100000
+    max_steps: 15000000
     time_horizon: 64
     summary_freq: 2000
     threaded: false
